--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "i18next": "^21.8.14",
     "react": "^18.2.0",
