--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.2.1",
     "craco-antd": "^2.0.0",
     "i18next": "^21.8.14",
+    "nth-check": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
