--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "antd": "^5.4.0",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
+    "date-util": "file:public/scripts/date-util",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-resources-to-backend": "^1.1.4",
+    "new-tab-db-adapter": "file:public/scripts/new-tab-db-adapter",
     "nth-check": "^2.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
